cluster/resources/global/vault/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
spec:
  ingressClassName: nginx
  rules:
    - host: vault-home.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
